[tool.poetry]
name = "torch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
polars = "^1.1.0"
tables = "^3.9.2"
h5py = "^3.11.0"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
numpy = "<2.0"
tensorboard = "^2.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
ruff-lsp = "^0.0.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
